[tool.poetry]
name = "zscaler_api_talkers"
version = "5.20230630.0"
description = "Unofficial Zscaler API python SDK for ZIA, ZPA, ZDX, and ZCC"
authors = ["Sergio Pereira <sergitopereira@hotmail.com>"]
readme = "README.md"
packages = [{include = "zscaler_api_talkers"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
appdirs = "^1.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
