[tool.poetry]
name = "zscaler_api_talkers"
version = "6.1.0"
description = "Unofficial Zscaler API python SDK for ZIA, ZPA and Zscaler Client Connector"
authors = ["Sergio Pereira <sergitopereira@hotmail.com>"]
readme = "README.md"
packages = [{include = "zscaler_api_talkers"}]

[tool.poetry.dependencies]
python = ">=3.7"
appdirs = "^1.4.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
