[metadata]
name = Zscaler API Talkers
version = 1.1
author = Sergio Pereira
author_email = spereira@zscaler.com
description = Zscaler API client talkers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sergitopereira/zscaler_api_talkers.git
project_urls =
    Bug Tracker = https://github.com/sergitopereira/zscaler_api_talkers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src