[metadata]
name = Zscaler API Talkers
version = 1.5
author = Sergio Pereira
author_email = spereira@zscaler.com
description = Zscaler API client talkers
long_description = file: README.md
long_description_content_type = Zscaler ZIA API: https://help.zscaler.com/zia/api
                                Zscaler ZPA API: https://help.zscaler.com/zpa/api-reference
url = https://github.com/sergitopereira/zscaler_api_talkers.git
project_urls =
    Bug Tracker = https://github.com/sergitopereira/zscaler_api_talkers/issues
    Changelog = https://github.com/sergitopereira/zscaler_api_talkers/blob/sergiodevelop/docs/changelog.rst

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
package_dir =
     = src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools

[options.packages.find]
where = src